# scoreserver

./: .gitignore  README.md  alembic.ini  flake.nix  pyproject.toml
scoreserver/: main.py  models.py
scoreserver/alembic/: env.py
scoreserver/alembic/versions/: d40953d49a76_test_revision.py
scoreserver/api/: deps.py  main.py
scoreserver/api/routes/: high_scores.py  users.py
scoreserver/core/: config.py  db.py
