[tool.poetry]
name = "scoreserver"
version = "0.0.1"
description = ""
authors = [ "ChinchillAI <chinchillaidev@gmail.com>"]
readme = "README.md"
packages = [{include = "scoreserver"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
sqlmodel = "^0.0.21"
alembic = "^1.13.2"
pydantic-settings = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
